--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "softwareeng",
   "private": true,
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
+    "build": "dotenv -- turbo build",
+    "dev": "dotenv -- turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "build:packages": "dotenv -- turbo build --filter=./packages/*",
+    "build:prisma": "dotenv -- turbo build --filter=./packages/prisma/*",
+    "prisma:dbpush": "dotenv -- turbo dbpush"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
@@ -15,5 +18,8 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "dotenv-cli": "^8.0.0"
   }
 }
