feat: Login @me resetpassword

--- a/turbo.json
+++ b/turbo.json
@@ -17,8 +17,8 @@
       "cache": false,
       "persistent": true
     },
-    "prisma": {
-      "dependsOn": ["^prisma"]
+    "dbpush": {
+      "dependsOn": ["^dbpush"]
     }
   }
 }
