--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,17 +20,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@anatine/zod-nestjs": "^2.0.9",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "@se/prisma": "workspace:*",
+    "@prisma/client": "^6.2.1",
     "@se/customfilter": "workspace:*",
     "@se/custominterceptor": "workspace:*",
-    "@se/custompipe": "workspace:*"
+    "@se/custompipe": "workspace:*",
+    "@se/prisma": "workspace:*",
+    "argon2": "^0.41.1",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
