--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@anatine/zod-nestjs": "^2.0.9",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
