--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -52,5 +52,11 @@ pids
 *.seed
 *.pid.lock
 
+storage/*/*.png
+storage/*/*.jpeg
+storage/*/*.jpg
+storage/*/*.gif
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
