--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@anatine/zod-nestjs": "^2.0.9",
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "@se/custompipe": "workspace:*",
     "@se/prisma": "workspace:*",
     "argon2": "^0.41.1",
+    "axios": "^1.8.1",
     "randomstring": "^1.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
