--- a/packages/CustomFilter/package.json
+++ b/packages/CustomFilter/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
+    "@nestjs/websockets": "^11.0.11",
     "zod": "^3.23.8"
   }
 }
