--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,17 +28,21 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/serve-static": "^5.0.2",
+    "@nestjs/websockets": "^11.0.11",
     "@prisma/client": "^6.2.1",
     "@se/customfilter": "workspace:*",
     "@se/custominterceptor": "workspace:*",
     "@se/custompipe": "workspace:*",
     "@se/prisma": "workspace:*",
+    "@types/socket.io": "^3.0.2",
     "argon2": "^0.41.1",
     "axios": "^1.8.1",
     "randomstring": "^1.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
