--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/serve-static": "^5.0.2",
+    "@nestjs/swagger": "^11.1.0",
     "@nestjs/websockets": "^11.0.11",
     "@prisma/client": "^6.2.1",
     "@se/customfilter": "workspace:*",
