feat(backend): slip verify success /

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -39,6 +39,10 @@
     "@types/socket.io": "^3.0.2",
     "argon2": "^0.41.1",
     "axios": "^1.8.1",
+    "jimp": "^1.6.0",
+    "promptparse": "^1.4.0",
+    "qr-scanner": "^1.4.2",
+    "qrcode-reader": "^1.0.4",
     "randomstring": "^1.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
