--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
